--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
                 <h3 class="mt-4">Website name</h3>
               </div>
               <div class="footer-text ">
-                <p class="text-white">
+                <p class="text-white" style="  padding: 20px; text-indent: 60px;" >
                   Providing financial or material support to a wide range of causes and organizations enables meaningful
                   and lasting positive change by empowering initiatives that address societal challenges, improve the
                   lives of individuals, promote sustainability, and foster opportunities for growth and development
